# transcriber-yt-dlp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CONSTITUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GSD.md  LICENSE  MASTER_PROMPT_FOR_CLAUDE.md  PROJECT_PRINCIPLES.md  PROJECT_SPEC_LOCK.md  README.md  ROADMAP.md  SDD.md  SECURITY.md  TASKS.md  Transcriber.spec  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
assets/ascii/: README.md
configs/: app.example.yaml  ascii.example.yaml  profiles.example.yaml  providers.example.yaml  safety.example.yaml
docs/adr/: 0001-use-modular-monolith.md  0002-use-python-312-src-layout-uv.md  0003-use-rich-questionary-pyfiglet-ui.md  0004-use-yt-dlp-as-media-engine.md  0005-use-gpu-only-transcription.md  0006-use-configurable-llm-provider.md  0007-require-dry-run-safety-pipeline.md  0008-public-repo-local-config.md  0009-phase-tags-releases.md  0010-package-windows-exe-later.md  0011-use-ascii-art-assets.md  0012-windows-only-for-now.md  0013-secrets-in-env-not-config.md  README.md
docs/architecture/: boundaries.md  c4-components.md  c4-containers.md  c4-context.md  module-manifest.md
docs/checklists/: ai-continuation.md  dependency.md  phase-completion.md  refactor.md  release.md  sensitive-actions.md
docs/design/: ascii-art-system.md  configuration.md  github-workflow.md  history-and-reports.md  i18n.md  llm-cleanup.md  media-download.md  packaging.md  safety-pipeline.md  testing.md  transcription.md  ui-ux.md  weather.md
docs/github/: repository-setup.md  tagging-and-releases.md
docs/phases/: phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md  phase-20.md
docs/templates/: adr-template.md  module.toml.example
scripts/: README.md  bootstrap.ps1  build_exe.ps1  build_installer.ps1  installer.iss  pyi_entry.py  quality_gate.py
src/: README.md
src/transcriber/: __init__.py  __main__.py
tests/: README.md  conftest.py
tests/architecture/: test_boundaries.py
tests/integration/: test_download_pipeline.py
tests/unit/: test_animation.py  test_archive.py  test_ascii_art.py  test_audit.py  test_banner.py  test_batch.py  test_batch_flow.py  test_cleanup_core.py  test_cookies.py  (+52 more)
(+96 files in other folders)
