[project]
name = "transcriber"
version = "0.1.0"
description = "Beautiful Windows terminal TUI for yt-dlp downloads, GPU-only transcription, and transcript cleanup."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Arthur Alberto" }
]
dependencies = [
    "pyfiglet>=1.0.4",
    "questionary>=2.1.1",
    "rich>=15.0.0",
]

[project.scripts]
transcriber = "transcriber.__main__:main"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts"]
