[project]
name = "transcriber"
version = "0.1.0"
description = "Beautiful Windows terminal TUI for yt-dlp downloads, GPU-only transcription, and transcript cleanup."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Arthur Alberto" }
]
dependencies = [
    "pydantic>=2.13.4",
    "pyfiglet>=1.0.4",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "yt-dlp>=2026.6.9",
]

[project.scripts]
transcriber = "transcriber.__main__:main"

[project.optional-dependencies]
# GPU-only transcription stack (heavy; install separately with CUDA).
transcription = ["faster-whisper>=1.0"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "pyright",
  "types-pyyaml>=6.0.12.20260518",
  "coverage>=7.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts"]

[tool.coverage.run]
source = ["transcriber"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = false
exclude_also = [
  'if TYPE_CHECKING:',
  'raise NotImplementedError',
  '\.\.\.',
]
